codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__manual_mode_picker.snap
---
source: tui/src/chatwidget/tests/permission_shortcuts_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Update Model Permissions

  1. Ask for approval  Codex can read and edit files in the current workspace, and run commands.
                       Approval is required to access the internet or edit other files.
  2. Approve for me    Only ask for actions detected as potentially unsafe.
  3. Full Access       Codex can edit files outside this workspace and access the internet without
                       asking for approval. Exercise caution when using.
  4. Read Only         Codex can read files in the current workspace. Approval is required to edit
                       files or access the internet.
› 5. Manual (current)  Review file edits and shell commands before they run. Existing command
                       rules and session approvals still apply.

  Press enter to confirm or esc to go back
