codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__manual_mode_running.snap
---
source: tui/src/chatwidget/tests/permission_shortcuts_tests.rs
expression: "render_bottom_popup(&chat, 90)"
---
• Working (0s • esc to interrupt)


› Ask Codex to do anything

  gpt-5.6-sol default                                                        Manual mode
